implemented the backend logic skin scanning api

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5001
 
 MONGO_URL=mongodb+srv://notchaidb:Bless%405697@notchaidb.u1utazv.mongodb.net/notchaidb
+
+AutodermApikey=b9cJgVLaZ_IpTvCgt4k5qzIpNWo8aU8IXY-ga5I8Wq0
